Show orders only to drivers with matching vehicle type or who can carry