@@ -2,6 +2,7 @@ package com.logistics.smartlogistics.service;
 
 import com.logistics.smartlogistics.entity.DeliveryOrder;
 import com.logistics.smartlogistics.entity.DriverProfile;
+import com.logistics.smartlogistics.enums.DriverAvailability;
 import com.logistics.smartlogistics.repository.DriverProfileRepository;
 import org.springframework.stereotype.Service;
 
@@ -19,26 +20,45 @@ public class MatchingEngineService {
     }
 
     public List<DriverProfile> rankAvailableDrivers(DeliveryOrder order) {
-        // In Zip-Logistics, drivers are restricted to the pickup zone.
-        // For cross-zone journeys, the same driver can still handle the order after warehouse transfer.
+
         String zone = order.getPickupZone();
 
         List<DriverProfile> candidates = driverProfileRepository
-                .findByCurrentZoneAndAvailability(zone, com.logistics.smartlogistics.enums.DriverAvailability.ONLINE);
-
-        if (candidates.isEmpty()) {
-            return List.of();
-        }
+                .findByCurrentZoneAndAvailability(
+                        zone,
+                        DriverAvailability.ONLINE
+                );
 
         return candidates.stream()
+
+                // ✅ ONLY ELIGIBLE VEHICLES
+                .filter(driver ->
+                        driver.getVehicleType().canCarry(
+                                order.getWeightKg(),
+                                order.getLengthCm(),
+                                order.getBreadthCm(),
+                                order.getHeightCm()
+                        )
+                )
+
+                // ✅ SORT BEST DRIVER
                 .sorted(Comparator.comparingDouble(d -> score(order, d)))
-                .collect(Collectors.toList());
+
+                .toList();
     }
 
     private double score(DeliveryOrder order, DriverProfile driver) {
-        // Placeholder heuristic: prefer closer drivers; slightly prefer higher rating.
-        double distanceKm = DistanceUtils.distanceKm(order.getPickupLatitude(), order.getPickupLongitude(),
-                driver.getCurrentLatitude(), driver.getCurrentLongitude());
-        return distanceKm / Math.max(0.1, driver.getRating());
+
+        double distanceKm = DistanceUtils.distanceKm(
+                order.getPickupLatitude(), order.getPickupLongitude(),
+                driver.getCurrentLatitude(), driver.getCurrentLongitude()
+        );
+
+        double ratingFactor = 1 / Math.max(0.1, driver.getRating());
+
+        double vehiclePenalty = driver.getVehicleType().ordinal()
+                - order.getSuggestedVehicle().ordinal();
+
+        return distanceKm + (ratingFactor * 2) + (vehiclePenalty * 1.5);
     }
 }
